# snyk-project-tldr

./: .gitignore  Dockerfile  README.md  example_output.csv  example_secrets.sh  project_tldr.py  pyproject.toml  requirements.txt  setup.sh  snykv3.py
